<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-80dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/titleField"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/titleHint"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/directorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/directorField"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/directorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/directorHint"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/lengthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/lengthField"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/lengthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/lengthHint"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="MissingConstraints, TextFields" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/categoryField"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/categoryHint"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/yearField"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/yearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/yearHint"
            android:inputType="date"
            android:importantForAutofill="no"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/deleteMessageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submitButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
