<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stamatiou.moviesRepositoryApp.PasswordChangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newPasswordTextView"
            android:layout_width="411dp"
            android:layout_height="31dp"
            android:layout_marginStart="10dp"
            android:text="@string/prompt_new_repository_password"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/repeatNewPasswordTextView"
            android:layout_width="411dp"
            android:layout_height="31dp"
            android:layout_marginStart="10dp"
            android:text="@string/prompt_new_repository_password_repeat"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/repeatNewPasswordEditText"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/newPasswordSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
